--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ fastapi==0.85.0
 uvicorn==0.18.3
 xgboost==1.6.2
 scikit-learn==1.1.2
-pandas==1.5.0
+pandas==1.5.1
+numpy==1.23.4
+streamlit==1.13.0
+plotly==5.10.0
